Fix extraction when an archive has a percentage in the name

QUrl::toDisplayString() results in a QString containing %25 instead of %.
This affects both batch extractions and normal extractions from the Ark Part.

Porting to QUrl::toLocalFile() fixes this issue.

BUG: 365798
FIXED-IN: 16.08.0

Differential Revision: D2229